--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,22 @@ dependencies {
     implementation 'org.reflections:reflections:0.10.2'
     implementation 'javax.annotation:jsr250-api:1.0'
     //Application context
-
+    //Logging
+    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-jcl:2.19.0'
+    //Logging
+    //Lombok
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
-
+    //Lombok
+    //JUnit
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.9.0'
+    //JUnit
 }
 
 test {
