--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     //Logging
     implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
-    implementation 'org.apache.logging.log4j:log4j-jcl:2.19.0'
+    implementation 'org.slf4j:slf4j-nop:2.0.5'
     //Logging
     //Lombok
     compileOnly 'org.projectlombok:lombok:1.18.24'
