feature: WG-56 added auto convert for Injected properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 value=nikolya-shnook
 path.to.score=scr/users/score.txt
+OLEG=FAMILIYA
+numValue=12
+intNumValue=12
+scoreFileName=changeIt!
+keywordsFileName=changeIt2!
