WG-69 Переделал класс QuestionRepository (объединил вопросы и ответы в QuestionEntity, и закинул их в HashMap)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ numValue=12
 intNumValue=12
 scoreFileName=changeIt!
 keywordsFileName=changeIt2!
+questionsFileName=abc and questions
 ladderCount=10
