feature: WG-70 связал приложение перевёл приложение на фрейм ворк

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ path.to.score=scr/users/score.txt
 OLEG=FAMILIYA
 numValue=12
 intNumValue=12
-scoreFileName=changeIt!
-keywordsFileName=changeIt2!
+scoreFileName=PlayersScore
+keywordsFileName=slova
 questionsFileName=abc and questions
 ladderCount=10
