--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ scoreFileName=PlayersScore
 keywordsFileName=slova
 questionsFileName=abc and questions
 ladderCount=10
+pointsForWinning=100
+pointForLoosing=-100
+pointsForError=-50
