feature: WG-99 Вынести все пути к файлам из всех DAO в проперти

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,8 @@ ladderCount=10
 pointsForWinning=100
 pointForLoosing=-100
 pointsForError=-50
+baseDirectory=Users
+userPassPath=pass
+userProgressPath=progress
 minLoginLength=1
 maxLoginLength=15
