--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,6 +2,10 @@ keywordsFileName=keywordsFileForTest
 scoreFileName=playerScoreRepositoryTest
 questionsFileName=testQuestions
 ladderCount=10
+baseDirectory=Users
+userPassPath=passTest
+userProgressPath=progressTest
+
 pointsForWinning=100
 pointForLoosing=-100
 pointsForError=-50
