feature: WG-99 Вынести все пути к файлам из всех DAO в проперти

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ scoreFileName=PlayersScore
 keywordsFileName=slova
 questionsFileName=abc and questions
 ladderCount=10
+baseDirectory=Users
+userPassPath=pass
+userProgressPath=progress
