--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,3 +2,6 @@ keywordsFileName=keywordsFileForTest
 scoreFileName=playerScoreRepositoryTest
 questionsFileName=testQuestions
 ladderCount=10
+baseDirectory=Users
+userPassPath=passTest
+userProgressPath=progressTest
