bugfix:WG-001 исправил баг с чтением проперти

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 compileJava.options.encoding = 'UTF-8'
@@ -38,4 +39,12 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'tech.wg.WordApplication'
+        )
+    }
 }
